# facebook-event-aggregator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev-notes.md  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  tokens.sh
.github/workflows/: deploy.yml  publish-docker.yml  publish-pypi.yml  pypi-publish.yml  test.yml  tests.yml
app/: Event.py  Step-1.py  event.py  index.js  main.py  repo.py  step-1.py  to_ics.py  tokentool.js  user-access-token.html
app/export/: to_html.py  to_ics.py
app/export/templates/: base.html  index.css  index.html  index.js
app/scrape_and_parse/: driver.py  fb_login.py  locale.py  regex.py  scrape_and_parse.py
src/facebook_event_aggregator/: Event.py  __main__.py  main.py  repo.py
src/facebook_event_aggregator/export/: __init__.py  to_html.py  to_ics.py  utils.py
src/facebook_event_aggregator/export/templates/: base.html  index.html  index.js  workaround.py
src/facebook_event_aggregator/scraper/: __init__.py  driver.py  fb_login.py  parse.py  scrape_all.py  scrape_event_page.py  scrape_events_page.py  utils.py
src/facebook_event_aggregator/utils/: fb_regexes.py  url_converter.py
src/tests/: test_Event.py  test_repo.py
src/tests/export/: __init__.py  helpers.py  test_export_html.py  test_export_ics.py  test_utils.py
src/tests/scraper/: event_page.htm  events_page.htm  test_parse.py  test_scrape.py
src/tests/utils/: test_fb_regexes.py  test_url_converter.py
