[project]
name = ""
version = "0.0.0"
authors = [
    { name="Denperidge", email="denperidge@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.6"
dependencies = []
classifiers = [
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src/facebook_event_aggregator"

[tool.coverage.report]
omit = [
    "driver.py",  # selenium doesn't export options, and the other code is platform dependant
    "fb_login.py",  # Currently unimplemented
]