[project]
name = "facebook_event_aggregator"
version = "0.1.3"
authors = [
    { name="Denperidge", email="denperidge@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-slugify >= 7.0.0",
    "python_dateutil >= 2.8.2",
    "gitpython >= 3.1.40",
    "webdriver_manager >= 4.0.1",
    "selenium >= 4.15.2",
    "ics >= 0.7.2",
    "Jinja2 >= 3.1.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]

[project.urls]
"Homepage" = "https://github.com/Denperidge/facebook-event-aggregator"
"Bug Tracker" = "https://github.com/Denperidge/facebook-event-aggregator/issues"

[project.scripts]
facebook_event_aggregator = "facebook_event_aggregator:__main__"
f_a_e = "facebook_event_aggregator:__main__"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/facebook_event_aggregator"]

[tool.setuptools.package-data]
"htmlexport" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
addopts = "--cov=src/facebook_event_aggregator --cov-report term-missing"

[tool.coverage.report]
omit = [
    "driver.py",  # selenium doesn't export options, and the other code is platform dependant
    "fb_login.py",  # Currently unimplemented
]